--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "catpaw/starter",
+    "name": "catpaw/markdown-starter",
     "type": "project",
     "description": "A php CatPaw starter template",
     "homepage": "https://github.com/tncrazvan/catpaw-starter",
@@ -12,7 +12,7 @@
         ],
         "action:test": [],
         "test": [],
-        "start": "php -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/main.php' --libraries='./src/lib/' --info",
+        "start": "php -dxdebug.mode=off ./bin/start --entry='./src/main.php' --libraries='./src/lib/' --info",
         "watch": "php -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/main.php' --libraries='./src/lib/' --resources='./resources/' --info --watch",
         "product": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config",
         "build": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config --build",
@@ -37,7 +37,8 @@
         "php": "^8.1",
         "catpaw/core": "^0.4",
         "amphp/amp": "^2.6",
-        "amphp/file": "^2.0"
+        "amphp/file": "^2.0",
+        "catpaw/web": "^0.4"
     },
     "autoload-dev": {
         "psr-4": {
