--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "catpaw/markdown-starter",
     "type": "project",
-    "description": "A php CatPaw starter template",
-    "homepage": "https://github.com/tncrazvan/catpaw-starter",
+    "description": "A php CatPaw markdown starter template",
+    "homepage": "https://github.com/tncrazvan/catpaw-markdown-starter",
     "license": "MIT",
     "scripts": {
         "load": "composer dump-autoload -o",
